Revert "Attempts to fix svg files in dark mode"
This reverts commit d4d3e651a128dd44310e69f527da753661e71fe2.

--- a/src/_11ty/_tailwindCSS/raw-website.css
+++ b/src/_11ty/_tailwindCSS/raw-website.css
@@ -194,16 +194,3 @@
     @apply grow-0 gap-9 justify-end;
   }
 }
-
-/* Default (light mode) */
-img[src$=".svg"] {
-  filter: none;
-}
-
-/* Dark mode */
-@media (prefers-color-scheme: dark) {
-  img[src$=".svg"] {
-    filter: invert(1) brightness(2);
-    /* Invert the colors for dark mode */
-  }
-}
